# synk9

./: .gitignore  Makefile  README.md  creds.txt  enboard.sh  hmi.json  hmi.txt
agent/: .env  Cargo.toml  Dockerfile  fingerprint.sh  modbus_data.json
agent/src/: agent.rs  config.rs  helper.rs  main.rs  mdb_client.rs  mock.rs  monitoring.rs  plc_io.rs  state.rs  ws.rs
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx  main.tsx
client/src-tauri/: tauri.conf.json
client/src/components/: protected-route.tsx
client/src/hooks/: get.ts  mutate.ts
client/src/mutations/: agent.ts
client/src/queries/: agent.ts
client2/: .env  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json
client2/src/main/: index.ts
client2/src/renderer/: components.json
mdb-server/: main  main.c
s7/: go.mod  go.sum  main  main.go
server/: .dockerignore  .env  .env.docker  Dockerfile  docker-compose.yaml  package-lock.json  package.json
server/grafana/dashboards/: sample-dashboard.json
server/src/: app.module.ts  main.ts
server/src/account/: account.controller.ts  account.module.ts  account.service.ts
server/src/agent/: agent.controller.ts  agent.module.ts  agent.service.ts
server/src/alert-topic/: alert-topic.controller.ts  alert-topic.module.ts  alert-topic.service.ts
server/src/connection/: connection.module.ts  constants.ts
server/src/connection-store/: connection-store.module.ts  connection-store.service.ts
server/src/cordinator/: cordinator.gateway.ts  cordinator.module.ts  (+1 more)
(+100 files in other folders)
