[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-modbus = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
