[package]
name = "agent"
version = "0.1.0"
edition = "2021"
default-run = "agent"

[[bin]]
name = "mock"
path = "src/mock.rs"

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-modbus = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rxrust = "0.15.0"
anyhow = "1.0.97"
dotenv = "0.15.0"
tokio-tungstenite = "0.18"
futures = "0.3"
url = "2.5.4"
rust_socketio = { version = "0.6.0", features = ["async"] }
validator = { version = "0.19", features = ["derive"] }
thiserror = "1.0"
